# sauron

./: .gitignore  .gitlab-ci.yml  ChangeLog  Makefile.in  README  adduser  config-browser.in  config.in  configure  configure.ac  createtables  generatehosts  import-dhcp  import-zone  keygen  last  modhosts  moduser  restrict.yaml  sauron
Sauron/: BackEnd.pm  CGIutil.pm  DB-DBI.pm  Util.pm  UtilDhcp.pm  UtilZone.pm
Sauron/CGI/: Hosts.pm  Login.pm  Servers.pm  Templates.pm  Utils.pm
cgi/: browser.cgi  sauron.cgi
sql/: common.sql  drop_tables.sql  hosts.sql  sshfp_entries.sql
